fix: aplayer dark mode hover

--- a/src/styles/aplayer.css
+++ b/src/styles/aplayer.css
@@ -17,3 +17,7 @@ html.dark .aplayer.aplayer-withlist .aplayer-info {
 html.dark .aplayer .aplayer-lrc::before, html.dark .aplayer .aplayer-lrc::after {
   background: linear-gradient(180deg,hsla(240,7.7%,10.2%,0) 0,hsla(240,7.7%,10.2%,.8));
 }
+
+html.dark .aplayer .aplayer-list ol li:hover {
+  background: #101010
+}
